cluster/manifests/drive-sync/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drive-sync
  labels:
    name: drive-sync
    # drive-sync has a waypoint
    pod-security.kubernetes.io/enforce: baseline
